# Orbit

./: .gitignore  README.md  package-lock.json  package.json  replit.md
attached_assets/: Pasted--ORBIT-The-Coordination-Layer-for-Autonomous-AI-Agents-_1772893012057.txt  Pasted-Everyone-is-talking-about-AI-agents-But-almost-no-one-i_1772910046486.txt  Pasted-OpenMind-a-company-that-describes-itself-as-unlocking-m_1772910293905.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: footer.tsx  navigation.tsx  share-button.tsx  theme-provider.tsx  waitlist.tsx
client/src/hooks/: use-seo.ts
client/src/pages/: about.tsx  analytics.tsx  api-playground.tsx  audit.tsx  bridge.tsx  changelog.tsx  content-studio.tsx  developers.tsx  education.tsx  escrow.tsx  faq.tsx  fleet.tsx  governance.tsx  home.tsx  marketplace.tsx  merch.tsx  news.tsx  not-found.tsx  platform-overview.tsx  portfolio.tsx  registry-showcase.tsx  registry.tsx  research.tsx  roadmap.tsx  status.tsx  team.tsx  token.tsx  tracker.tsx  treasury.tsx  wallet.tsx  webhooks.tsx  whitepaper.tsx  x402.tsx
examples/autogpt/: orbit_plugin.py
examples/crewai/: orbit_crew.py
examples/langchain/: orbit_agent.py
mcp/: package.json
mcp/src/: index.ts
sdk/python/: pyproject.toml
sdk/python/orbit_sdk/: __init__.py  client.py
sdk/typescript/: package.json
sdk/typescript/src/: index.ts
server/: crypto.ts  identity.ts  routes.ts  storage.ts  treasury-agent.ts  wallet-engine.ts
shared/: schema.ts
